--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -16,7 +16,8 @@
     "./types": "./dist/types/index.js"
   },
   "files": [
-    "dist/"
+    "dist/",
+    "tsconfig.json"
   ],
   "sideEffects": false,
   "type": "module",
