--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
 
     /* Completeness */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["./src/"]
 }
