--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -15,6 +15,7 @@
     },
     "./configuration/babel": "./dist/configuration/babel.config.cjs",
     "./configuration/eslint": "./dist/configuration/eslintrc.cjs",
+    "./configuration/eslint-react": "./dist/configuration/eslintrc-react.cjs",
     "./configuration/rollup": "./dist/configuration/rollup.config.cjs",
     "./mixins": {
       "import": "./dist/mixins/index.js",
@@ -35,9 +36,9 @@
     "clean": "concurrently --group --prefix-colors blue,cyan npm:clean:*",
     "clean:build": "env-cmd cross-env-shell del-cli \\$BUILD_PATH/*",
     "clean:dist": "env-cmd cross-env-shell del-cli \\$DIST_PATH/*",
-    "lint": "eslint --ext .cjs,.js,.ts,.tsx . && tsc --noEmit",
+    "lint": "eslint --ext .cjs,.cts,.d.cts,.d.ts,.d.tsx,.js,.jsx,.ts,.tsx . && tsc --noEmit",
     "make": "concurrently --group --prefix-colors blue,cyan npm:make:*",
-    "make:babel": "env-cmd cross-env-shell babel \\$SRC_PATH/ --extensions .cjs,.js,.ts,.tsx --out-dir \\$BUILD_PATH/",
+    "make:babel": "env-cmd cross-env-shell babel \\$SRC_PATH/ --extensions .cjs,.js,.jsx,.ts,.tsx --out-dir \\$BUILD_PATH/",
     "make:tsc": "env-cmd cross-env-shell tsc --emitDeclarationOnly --outDir \\$BUILD_PATH/ --rootDir \\$SRC_PATH/",
     "package": "concurrently --group --prefix-colors blue,cyan,blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
@@ -50,30 +51,33 @@
     "node": ">=14"
   },
   "dependencies": {
-    "core-js": "^3.24.1"
+    "core-js": "^3.25.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@types/jest": "^29.0.0",
-    "concurrently": "^7.3.0",
+    "@babel/cli": "^7.19.3",
+    "@types/jest": "^29.1.2",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
-    "jest": "^29.0.2",
-    "rollup": "^2.79.0",
+    "jest": "^29.2.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-import-assertions": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.23.0"
+    "eslint": "^8.25.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.26.0-2"
   },
   "babel": {
     "extends": "./src/configuration/babel.config.cjs"
