--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.5.0",
+  "version": "0.6.1",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -57,7 +57,7 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@types/jest": "^29.2.3",
-    "concurrently": "^7.5.0",
+    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
@@ -72,8 +72,8 @@
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "babel-plugin-replace-import-extension": "^1.1.3",
     "eslint": "^8.28.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
