--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -44,6 +44,7 @@
     "package": "concurrently --group --prefix-colors blue,cyan,blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
     "package:es": "env-cmd cross-env-shell FORMAT=es rollup --config",
+    "prepare": "husky install",
     "prepublishOnly": "npm run clean && npm run make && npm run package",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=\\$SRC_PATH/"
@@ -52,11 +53,12 @@
     "node": ">=14"
   },
   "dependencies": {
-    "core-js": "^3.26.1"
+    "core-js": "^3.26.1",
+    "husky": "^8.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.2.4",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
@@ -67,15 +69,15 @@
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.5",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.26.0-2"
