--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -37,9 +37,9 @@
     "clean": "concurrently --group --prefix-colors blue,cyan npm:clean:*",
     "clean:build": "env-cmd cross-env-shell del-cli \\$BUILD_PATH/*",
     "clean:dist": "env-cmd cross-env-shell del-cli \\$DIST_PATH/*",
-    "lint": "eslint --ext .cjs,.cts,.d.cts,.d.ts,.d.tsx,.js,.jsx,.ts,.tsx . && tsc --noEmit",
+    "lint": "env-cmd cross-env-shell eslint --ext \\$EXTENSIONS . && tsc --noEmit",
     "make": "concurrently --group --prefix-colors blue,cyan npm:make:*",
-    "make:babel": "env-cmd cross-env-shell babel \\$SRC_PATH/ --extensions .cjs,.js,.jsx,.ts,.tsx --out-dir \\$BUILD_PATH/",
+    "make:babel": "env-cmd cross-env-shell babel \\$SRC_PATH/ --extensions \\$EXTENSIONS --ignore '**/*.d.cts' --out-dir \\$BUILD_PATH/",
     "make:tsc": "env-cmd cross-env-shell tsc --emitDeclarationOnly --outDir \\$BUILD_PATH/ --rootDir \\$SRC_PATH/",
     "package": "concurrently --group --prefix-colors blue,cyan,blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
@@ -53,12 +53,12 @@
     "node": ">=14"
   },
   "dependencies": {
-    "core-js": "^3.26.1",
-    "husky": "^8.0.2"
+    "core-js": "^3.27.1",
+    "husky": "^8.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@types/jest": "^29.2.4",
+    "@babel/cli": "^7.20.7",
+    "@types/jest": "^29.2.5",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
@@ -66,20 +66,20 @@
     "jest": "^29.3.1",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.29.0",
-    "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint": "^8.32.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.26.0-2"
   },
   "eslintConfig": {
