--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "checkJs": true,
     "jsx": "preserve",
+    "module": "ESNext",
     "moduleResolution": "NodeNext",
+    "strictNullChecks": true,
     "target": "ESNext"
   }
 }
