--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -24,6 +24,10 @@
     "./types": {
       "import": "./dist/types/index.js",
       "require": "./dist/types/index.cjs"
+    },
+    "./utils": {
+      "import": "./dist/utils/index.js",
+      "require": "./dist/utils/index.cjs"
     }
   },
   "files": [
@@ -53,34 +57,34 @@
     "node": ">=14"
   },
   "dependencies": {
-    "core-js": "^3.27.1",
+    "core-js": "^3.30.2",
     "husky": "^8.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@types/jest": "^29.2.5",
-    "concurrently": "^7.6.0",
+    "@babel/cli": "^7.21.5",
+    "@types/jest": "^29.5.1",
+    "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-import-assertions": "^7.20.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.32.0",
+    "eslint": "^8.40.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.26.0-2"
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5"
   },
   "eslintConfig": {
     "extends": "./src/configuration/eslintrc.cjs"
