--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "0.11.0",
+  "version": "1.0.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -16,7 +16,9 @@
     "./configuration/babel": "./dist/configuration/babel.config.cjs",
     "./configuration/eslint": "./dist/configuration/eslintrc.cjs",
     "./configuration/eslint-react": "./dist/configuration/eslintrc-react.cjs",
+    "./configuration/javascript": "./jsconfig.json",
     "./configuration/rollup": "./dist/configuration/rollup.config.cjs",
+    "./configuration/typescript": "./tsconfig.json",
     "./mixins": {
       "import": "./dist/mixins/index.js",
       "require": "./dist/mixins/index.cjs"
@@ -33,53 +35,51 @@
   "files": [
     "babel.config.cjs",
     "dist/",
+    "jsconfig.json",
     "tsconfig.json"
   ],
   "sideEffects": false,
   "type": "module",
   "scripts": {
     "clean": "concurrently --group --prefix-colors blue,cyan npm:clean:*",
-    "clean:build": "env-cmd cross-env-shell del-cli \\$BUILD_PATH/*",
-    "clean:dist": "env-cmd cross-env-shell del-cli \\$DIST_PATH/*",
-    "lint": "env-cmd cross-env-shell eslint --ext \\$EXTENSIONS . && tsc --noEmit",
+    "clean:build": "env-cmd cross-env-shell del-cli $BUILD_PATH/*",
+    "clean:dist": "env-cmd cross-env-shell del-cli $DIST_PATH/*",
     "make": "concurrently --group --prefix-colors blue,cyan npm:make:*",
-    "make:babel": "env-cmd cross-env-shell babel \\$SRC_PATH/ --extensions \\$EXTENSIONS --ignore '**/*.d.cts' --out-dir \\$BUILD_PATH/",
-    "make:tsc": "env-cmd cross-env-shell tsc --emitDeclarationOnly --outDir \\$BUILD_PATH/ --rootDir \\$SRC_PATH/",
+    "make:babel": "env-cmd cross-env-shell babel $SRC_PATH/ --extensions $EXTENSIONS --ignore '**/*.d.cts' --out-dir $BUILD_PATH/",
+    "make:tsc": "env-cmd cross-env-shell tsc --emitDeclarationOnly --outDir $BUILD_PATH/ --rootDir $SRC_PATH/",
     "package": "concurrently --group --max-processes=1 --prefix-colors blue,cyan,blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
     "package:es": "env-cmd cross-env-shell FORMAT=es rollup --config",
     "prepare": "husky install",
     "prepublishOnly": "npm run clean && npm run make && npm run package",
-    "test": "npm run lint && npm run test:unit",
-    "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=\\$SRC_PATH/"
-  },
-  "engines": {
-    "node": ">=14"
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "env-cmd cross-env-shell eslint --ext $EXTENSIONS . && tsc --noEmit",
+    "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=$SRC_PATH/"
   },
   "dependencies": {
-    "core-js": "^3.30.2",
+    "core-js": "^3.31.0",
     "husky": "^8.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
+    "@babel/cli": "^7.22.5",
     "@types/jest": "^29.5.2",
-    "concurrently": "^8.1.0",
+    "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
     "jest": "^29.5.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/eslint-parser": "^7.21.8",
-    "@babel/plugin-syntax-import-assertions": "^7.20.0",
-    "@babel/preset-env": "^7.22.4",
-    "@babel/preset-typescript": "^7.21.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
+    "@babel/plugin-syntax-import-attributes": "^7.20.0",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "babel-plugin-replace-import-extension": "^1.1.3",
     "eslint": "^8.42.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
