--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bitumen",
-  "version": "1.0.0",
-  "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
+  "version": "1.1.0",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
+  "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "repository": {
     "type": "git",
     "url": "https://github.com/nchevsky/bitumen"
@@ -57,40 +57,52 @@
     "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=$SRC_PATH/"
   },
   "dependencies": {
-    "core-js": "^3.31.0",
-    "husky": "^8.0.3"
+    "core-js": "^3.31.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@types/jest": "^29.5.2",
+    "@babel/cli": "^7.22.9",
+    "@types/jest": "^29.5.3",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
-    "jest": "^29.5.0",
+    "husky": "^8.0.3",
+    "jest": "^29.6.1",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/eslint-parser": "^7.22.5",
+    "@babel/core": "^7.22.9",
+    "@babel/eslint-parser": "^7.22.9",
     "@babel/plugin-syntax-import-attributes": "^7.20.0",
-    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.42.0",
+    "eslint": "^8.44.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5"
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5-4"
   },
   "eslintConfig": {
     "extends": "./src/configuration/eslintrc.cjs"
   },
   "jest": {
     "clearMocks": true,
+    "collectCoverageFrom": [
+      "<rootDir>/src/**",
+      "!<rootDir>/src/configuration/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    },
     "extensionsToTreatAsEsm": [
       ".ts",
       ".tsx"
