--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bitumen",
-  "version": "1.2.0",
+  "version": "2.0.0",
+  "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
-  "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "repository": {
     "type": "git",
     "url": "https://github.com/nchevsky/bitumen"
@@ -46,45 +46,51 @@
     "clean:dist": "env-cmd cross-env-shell del-cli $DIST_PATH/*",
     "make": "concurrently --group --prefix-colors blue,cyan npm:make:*",
     "make:babel": "env-cmd cross-env-shell babel $SRC_PATH/ --extensions $EXTENSIONS --ignore '**/*.d.cts' --out-dir $BUILD_PATH/",
-    "make:tsc": "env-cmd cross-env-shell tsc --emitDeclarationOnly --outDir $BUILD_PATH/ --rootDir $SRC_PATH/",
-    "package": "concurrently --group --max-processes=1 --prefix-colors blue,cyan,blue,cyan npm:package:*",
+    "make:tsc": "env-cmd cross-env-shell tsc --outDir $BUILD_PATH/ --rootDir $SRC_PATH/",
+    "package": "concurrently --group --max-processes=1 --prefix-colors blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
     "package:es": "env-cmd cross-env-shell FORMAT=es rollup --config",
     "prepare": "husky install",
     "prepublishOnly": "npm run clean && npm run make && npm run package",
     "test": "npm run test:lint && npm run test:unit",
-    "test:lint": "env-cmd cross-env-shell eslint --ext $EXTENSIONS . && tsc --noEmit",
+    "test:lint": "env-cmd cross-env-shell eslint --ext $EXTENSIONS . && tsc --emitDeclarationOnly false --noEmit",
     "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=$SRC_PATH/"
   },
   "dependencies": {
-    "core-js": "^3.32.0"
+    "core-js": "^3.33.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@types/jest": "^29.5.3",
-    "concurrently": "^8.2.0",
+    "@babel/cli": "^7.23.0",
+    "@types/eslint": "^8.44.3",
+    "@types/jest": "^29.5.5",
+    "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
-    "del-cli": "^5.0.0",
+    "del-cli": "^5.1.0",
     "env-cmd": "^10.1.0",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
     "rollup": "^2.79.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "typescript": "^5.1.6"
+    "rollup-plugin-copy": "^3.5.0"
   },
   "peerDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/eslint-parser": "^7.22.10",
+    "@babel/core": "^7.23.0",
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-import-attributes": "^7.20.0",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.5",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "babel-plugin-replace-import-extension": "^1.1.3",
-    "eslint": "^8.46.0",
+    "eslint": "^8.50.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0-2"
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
+    "typescript": "^5.2.2"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "eslintConfig": {
     "extends": "./src/configuration/eslintrc.cjs"
