--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -50,36 +50,36 @@
     "package": "concurrently --group --max-processes=1 --prefix-colors blue,cyan npm:package:*",
     "package:cjs": "env-cmd cross-env-shell FORMAT=cjs rollup --config",
     "package:es": "env-cmd cross-env-shell FORMAT=es rollup --config",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "npm run clean && npm run make && npm run package",
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "env-cmd cross-env-shell eslint --ext $EXTENSIONS . && tsc --emitDeclarationOnly false --noEmit",
     "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=$SRC_PATH/"
   },
   "dependencies": {
-    "core-js": "^3.35.0"
+    "core-js": "^3.35.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@types/eslint": "^8.56.1",
+    "@babel/cli": "^7.23.9",
+    "@types/eslint": "^8.56.2",
     "@types/jest": "^29.5.11",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
     "env-cmd": "^10.1.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "jest": "^29.7.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0"
   },
   "peerDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/eslint-parser": "^7.23.3",
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.23.9",
     "@babel/plugin-syntax-import-attributes": "^7.23.3",
-    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "babel-plugin-replace-import-extension": "^1.1.4",
     "eslint": "^8.56.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
