--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitumen",
-  "version": "2.3.0",
-  "description": "A collection of utility classes, types, and opinionated configurations for Babel, ESLint, rollup.js, and TypeScript.",
+  "version": "3.0.0",
+  "description": "A collection of utilities, types, and opinionated configuration for Babel, ESLint, Rollup, TypeScript, and Vitest.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
   "repository": {
@@ -16,9 +16,9 @@
     "./configuration/babel": "./dist/configuration/babel.config.cjs",
     "./configuration/eslint": "./dist/configuration/eslintrc.cjs",
     "./configuration/eslint-react": "./dist/configuration/eslintrc-react.cjs",
-    "./configuration/javascript": "./jsconfig.json",
     "./configuration/rollup": "./dist/configuration/rollup.config.cjs",
     "./configuration/typescript": "./tsconfig.json",
+    "./configuration/vitest": "./dist/configuration/vitest.config.js",
     "./mixins": {
       "import": "./dist/mixins/index.js",
       "require": "./dist/mixins/index.cjs"
@@ -33,9 +33,7 @@
     }
   },
   "files": [
-    "babel.config.cjs",
     "dist/",
-    "jsconfig.json",
     "tsconfig.json"
   ],
   "sideEffects": false,
@@ -54,65 +52,61 @@
     "prepublishOnly": "npm run clean && npm run make && npm run package",
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "env-cmd cross-env-shell eslint --ext $EXTENSIONS --ignore-path .gitignore . && tsc --emitDeclarationOnly false --noEmit",
-    "test:unit": "env-cmd cross-env-shell ENV=jest jest --coverage --roots=$SRC_PATH/"
+    "test:unit": "env-cmd cross-env-shell vitest --root=$SRC_PATH/"
   },
   "dependencies": {
-    "core-js": "^3.36.0"
+    "core-js": "^3.38.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@types/eslint": "^8.56.5",
-    "@types/jest": "^29.5.12",
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-syntax-import-attributes": "^7.23.3",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/babel__core": "^7.20.5",
+    "@types/eslint": "^8.56.12",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@vitest/coverage-istanbul": "^2.0.5",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
     "env-cmd": "^10.1.0",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import-x": "^4.2.1",
+    "husky": "^9.1.5",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.5.4",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/eslint-parser": "^7.23.10",
-    "@babel/plugin-syntax-import-attributes": "^7.23.3",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-typescript": "^7.23.3",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "babel-plugin-replace-import-extension": "^1.1.4",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.29.1",
-    "typescript": ">=5.2"
+    "@babel/core": "^7.23",
+    "@babel/eslint-parser": "^7.23",
+    "@babel/plugin-syntax-import-attributes": "^7.23",
+    "@babel/preset-env": "^7.23",
+    "@babel/preset-typescript": "^7.23",
+    "@typescript-eslint/eslint-plugin": "^7.16",
+    "eslint": "^8.50",
+    "eslint-import-resolver-typescript": "^3.6.2",
+    "eslint-plugin-import-x": "^4.2.1",
+    "eslint-plugin-react": "^7.35",
+    "eslint-plugin-react-hooks": "*",
+    "typescript": "^5.5"
   },
   "peerDependenciesMeta": {
+    "eslint-plugin-react": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    },
     "typescript": {
       "optional": true
     }
   },
   "eslintConfig": {
     "extends": "./src/configuration/eslintrc.cjs"
-  },
-  "jest": {
-    "clearMocks": true,
-    "collectCoverageFrom": [
-      "<rootDir>/src/**",
-      "!<rootDir>/src/configuration/**"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    },
-    "extensionsToTreatAsEsm": [
-      ".ts",
-      ".tsx"
-    ]
   }
 }
