--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitumen",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "A collection of utilities, types, and opinionated configuration for Babel, ESLint, Rollup, TypeScript, and Vitest.",
   "author": "Nick Chevsky",
   "license": "BSD-2-Clause",
@@ -55,44 +55,44 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "core-js": "^3.40.0"
+    "core-js": "^3.41.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
-    "@babel/preset-typescript": "^7.26.0",
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/babel__core": "^7.20.5",
     "@types/eslint": "^8.56.12",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "^3.0.9",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "del-cli": "^6.0.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-import-resolver-typescript": "^3.9.1",
+    "eslint-plugin-import-x": "^4.9.2",
     "husky": "^9.1.7",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "typescript": "~5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^3.0.9"
   },
   "peerDependencies": {
     "@babel/core": "^7.26",
     "@babel/preset-env": "^7.26",
     "@babel/preset-typescript": "^7.26",
     "@typescript-eslint/eslint-plugin": "^7.16",
-    "@vitest/coverage-istanbul": "^2",
-    "core-js": "^3.40.0",
+    "@vitest/coverage-istanbul": ">=2",
+    "core-js": "^3.41.0",
     "eslint": "^8.50",
     "eslint-import-resolver-typescript": "^3.6.2",
     "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-react": "^7.35",
     "eslint-plugin-react-hooks": "*",
     "typescript": "^5.5",
-    "vitest": "^2"
+    "vitest": ">=2"
   },
   "peerDependenciesMeta": {
     "@babel/core": {
